Course Offering Edit
Corrected issue with validation of instructors on cross listed courses that are not the controlling course.  Minor code cleanup.